Add unit test for EcgDataManager
- update theECG build to build sources in a library linked in the executable, so the librarycan be used as dependency for the test
- add a google test in test directory for EcgDataManager behavior, with test data
- update readme for test execution instructions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,32 @@
-set(EXE theECG)
-
-find_library(libQt5Widgets libQt5Widgets /c/msys64/mingw64/qt5-static/lib)
-find_library(libQt5Core libQt5Core /mingw64/qt5-static/lib)
+find_library(libQt5Widgets libQt5Widgets)
+find_library(libQt5Core libQt5Core)
 find_library(libstdc++ libstdc++)
 
-# add the executable
-add_executable(${EXE} 
-    main.cpp
+set(LIB theECGLib)
+add_library(${LIB} STATIC
     EcgDataManager.cpp
 )
 
-target_link_libraries(${EXE} 
+target_link_libraries(${LIB} PUBLIC 
     libQt5Widgets
     libQt5Core
     libstdc++
 )
 
-target_include_directories(${EXE} PUBLIC "/mingw64/qt5-static/include")
+target_include_directories(${LIB} PUBLIC 
+    ${CMAKE_CURRENT_SOURCE_DIR} 
+    "/mingw64/qt5-static/include"
+)
+
+set(EXE theECG)
+
+# add the executable
+add_executable(${EXE} 
+    main.cpp
+)
+
+target_link_libraries(${EXE} 
+    ${LIB}
+)
+
+
