Add ECG graph widget
Add an ECG graph widget with a timer to updated point by point with the ECG data.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,17 @@
-find_library(libQt5Widgets libQt5Widgets)
-find_library(libQt5Core libQt5Core)
+find_package(Qt5 COMPONENTS Core Widgets Gui)
+
 find_library(libstdc++ libstdc++)
 
 set(LIB theECGLib)
 add_library(${LIB} STATIC
     EcgDataManager.cpp
+    EcgGraph.cpp
 )
 
 target_link_libraries(${LIB} PUBLIC 
     libQt5Widgets
     libQt5Core
+    libQt5Gui
     libstdc++
 )
 
@@ -17,6 +19,8 @@ target_include_directories(${LIB} PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR} 
     "/mingw64/qt5-static/include"
 )
+
+set_property(TARGET ${LIB} PROPERTY AUTOMOC ON)
 
 set(EXE theECG)
 
@@ -28,5 +32,3 @@ add_executable(${EXE}
 target_link_libraries(${EXE} 
     ${LIB}
 )
-
-
